src/objects/OrganizationString__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLineName__c</fullName>
        <label>Business Line Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFOorDelegateContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFO or Delegate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (CFO or Delegate)</relationshipLabel>
        <relationshipName>Organization_String2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceLead2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Lead 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (Finance Lead 2)</relationshipLabel>
        <relationshipName>OrganizationStringFinanceLead2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinanceandAccountingManagerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Maps to finance lead</inlineHelpText>
        <label>Finance Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (Finance and Accounting Manager)</relationshipLabel>
        <relationshipName>Organization_String1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeographyName__c</fullName>
        <label>Geography Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobID__c</fullName>
        <label>JobID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntityName__c</fullName>
        <label>Legal Entity Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>Location Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <externalId>true</externalId>
        <label>OUID</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUName__c</fullName>
        <description>This is the Name of the Operating Unit</description>
        <inlineHelpText>This is the Name of the Operating Unit</inlineHelpText>
        <label>OU Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingGroup__c</fullName>
        <label>Operating Group</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <description>This is the ID of the Operating Unit</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the ID of the Operating Unit</inlineHelpText>
        <label>OrgID</label>
        <length>240</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <externalId>true</externalId>
        <label>Organization Name</label>
        <length>240</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PLManagerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver 2 on stakeholders screen.</inlineHelpText>
        <label>Project Approver 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String</relationshipLabel>
        <relationshipName>Organization_String</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAccountant2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Accountant 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (Project Accountant 2)</relationshipLabel>
        <relationshipName>OrganizationStringProjectAccountant2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAccountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Accountant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (Project Accountant)</relationshipLabel>
        <relationshipName>OrganizationStringProjectAccountant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PSA Resource</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization String (Project Approver)</relationshipLabel>
        <relationshipName>OrganizationStringProjectApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectOwning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this org will appear in the project setup filter.</description>
        <inlineHelpText>If checked this org will appear in the project setup filter.</inlineHelpText>
        <label>Project Owning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Owning_Text__c</fullName>
        <formula>IF( ProjectOwning__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Project Owning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubBusinessLineName__c</fullName>
        <label>Sub Business Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperGeography__c</fullName>
        <label>Super Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateIdCostEvent__c</fullName>
        <label>Template Id: Cost/Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateIdCostWork__c</fullName>
        <label>Template Id: Cost/Work</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateIdEventEvent__c</fullName>
        <label>Template Id: Event/Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateIdWorkWork__c</fullName>
        <label>Template Id: Work/Work</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateidWorkEvent__c</fullName>
        <label>Template Id: Work/Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clACLOfficeLocation__c</fullName>
        <label>ACL Office Location</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Baie-Comeau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Barrie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Beloeil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Bracebridge (Manitoba)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Bracebridge (Taylor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Brampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Calgary (Kensington)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Calgary (Midpark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Calgary South (Railway)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Cobourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Delson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Edmonton (103rd Ave)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Edmonton (107th Ave)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Fort McMurray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Gatineau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Grande Prairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Guelph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Halifax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Hamilton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Hinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Kelowna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Kingston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Kitchener (Frederick)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Kitchener (Sportsworld)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Kitchener (Victoria)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Laval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMBusinessLineSegment__c</fullName>
        <label>AECOM Business Line Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Srv (Non Tishman)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Planning Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tishman Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMClientType__c</fullName>
        <label>AECOM Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External End Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture-not lead partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay When Paid - n/a in ANZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMFundingSource__c</fullName>
        <label>AECOM Funding Source</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non US National Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Federal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMGreenProject__c</fullName>
        <label>AECOM Green Project</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beam Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREEAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casbee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEEQUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code for Sustainable Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estidama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Building Eval Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRIHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGBC schemes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NABERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMJointVentureProject__c</fullName>
        <label>AECOM Joint Venture Project</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMPMCMFlag__c</fullName>
        <label>AECOM PM CM Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMProjectInitiative__c</fullName>
        <label>AECOM Project Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMProjectReviewCategory__c</fullName>
        <label>AECOM Project Review Category</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMProjectStateCountry__c</fullName>
        <label>AECOM Project State Country</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0_Multiple Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta, Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashmore and Cartier Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic Ocean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMSegmentationReason__c</fullName>
        <label>AECOM Segmentation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Purposes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Segmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segmentable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMServiceType__c</fullName>
        <label>AECOM Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design and Build Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviro Services &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourcing Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMStateFunding__c</fullName>
        <label>AECOM State Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>